--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# jest / vitest temp files
+jest-html-reporters-*.html
+*.lcov
+
+# storybook
+storybook-static/
