--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "tailwind-merge": "^3.0.2",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.475.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
