--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tailwindcss": "^3.4.17",
     "tailwind-merge": "^3.0.2",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0"
   },
   "devDependencies": {
