--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.5.2",
     "tailwindcss": "^3.4.17",
     "tailwind-merge": "^3.0.2",
+    "drizzle-orm": "^0.39.3",
+    "drizzle-kit": "^0.30.6",
+    "@neondatabase/serverless": "^0.10.4",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.475.0"
@@ -24,6 +28,9 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "drizzle-orm": "^0.39.3",
+    "drizzle-kit": "^0.30.6",
+    "jsdom": "^26.0.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
