--- a/package.json
+++ b/package.json
@@ -9,18 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@neondatabase/serverless": "^0.10.4",
+    "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "drizzle-kit": "^0.30.6",
+    "drizzle-orm": "^0.39.3",
+    "jose": "^6.0.11",
+    "lucide-react": "^0.475.0",
     "next": "15.3.3",
+    "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "tailwindcss": "^3.4.17",
     "tailwind-merge": "^3.0.2",
-    "drizzle-orm": "^0.39.3",
-    "drizzle-kit": "^0.30.6",
-    "@neondatabase/serverless": "^0.10.4",
-    "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.475.0"
+    "tailwindcss": "^3.4.17",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -28,12 +32,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "drizzle-orm": "^0.39.3",
-    "drizzle-kit": "^0.30.6",
-    "jsdom": "^26.0.0",
     "autoprefixer": "^10.4.21",
+    "drizzle-kit": "^0.30.6",
+    "drizzle-orm": "^0.39.3",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
+    "jsdom": "^26.0.0",
     "postcss": "^8.5.4",
     "typescript": "^5"
   }
