--- a/package.json
+++ b/package.json
@@ -9,9 +9,6 @@
     "lint": "next lint",
     "test": "jest --watchAll"
   },
-  "jest": {
-    "testEnvironment": "jsdom"
-  },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.4",
     "bcrypt": "^6.0.0",
@@ -33,11 +30,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@swc/jest": "^0.2.39",
     "@tailwindcss/postcss": "^4",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.4",
     "@testing-library/react": "^16.3.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
