--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,13 @@
-name: CI
-
-# 触发工作流的事件
-on:
-  push:
-    branches: ['main', 'dev']
-  pull_request:
-    branches: ['main', 'dev']
-
+# .github/workflows/ci.yml
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
 
     steps:
-      # 步骤1: 检出仓库代码
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      # 步骤2: 设置 Node.js 环境，并启用依赖缓存
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 18
-          cache: 'npm'
-
-      # 步骤3: 安装依赖
-      # 使用 `npm ci` 而不是 `npm install`，可以获得更可靠和更快的安装速度
-      - name: Install dependencies
-        run: npm ci
+      # ... 其他步骤
 
       # 步骤4: 运行测试
-      # `npm ci` 会自动处理 `jest --watchAll` 的问题
+      # 使用 `test:ci` 脚本，它会运行一次测试并退出
       - name: Run tests
-        run: npm test
-
-      # 步骤5 (可选): 运行 Next.js 构建，检查是否存在构建错误
-      - name: Run Next.js build
-        run: npm run build
+        run: npm run test:ci
+      # ... 其他步骤
