--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,5 @@
 name: CI
 
-# 触发工作流的事件
 on:
   push:
     branches: ['main', 'dev']
@@ -12,25 +11,28 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 步骤1: 检出仓库代码
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # 步骤2: 设置 Node.js 环境，并启用依赖缓存
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
 
-      # 步骤3: 安装依赖
       - name: Install dependencies
         run: npm ci
 
-      # 步骤4: 运行测试
+      # 运行测试，并传递 DATABASE_URL 环境变量
       - name: Run tests
         run: npm run test:ci
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
 
-      # 步骤5: 运行 Next.js 构建，检查是否存在构建错误
+      # 运行 Next.js 构建，并传递 DATABASE_URL 环境变量
       - name: Run Next.js build
         run: npm run build
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
